Assignment: Finished picture frame, cactus pot